# dbComm

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README  README.md  dbComm.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml  release.yml
.github/workflows/publish-to-test-pypi.yml/: publish-to-test-pypi.yml
LICENSE/: index.html
api/: index.html
dbComm/: __init__.py  dbComm.py  mongo.py  objectID.py
dbComm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: api.md  index.md
search/: search_index.json
