[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbComm"
version = "0.2.0"
authors = [
  { name="Alex Caviness", email="caviness2@llnl.gov" },
]
description = "Module for communicating with a (MongoDB) database"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: PSF License",
    "Operating System :: OS Independent",
]
dependencies = [
  'matplotlib>=3.4.3',
  'pymongo>=3.12.0',
]

[project.urls]
"Homepage" = "https://mybitbucket.llnl.gov/projects/PREC/repos/database-comm/"
