[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbComm"
version = "0.3.0"
authors = [
  { name="Pigeon Caviness", email="caviness2@llnl.gov" },
]
description = "Module for communicating with a (MongoDB) database"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pymongo>=3.12.0',
  'sshtunnel>=0.4.0'
]

[project.urls]
"Homepage" = "https://github.com/LLNL/dbComm"
